--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,10 +4,10 @@ on:
   workflow_dispatch:
     inputs:
       authcode:
-        description: '& "${Env:PROGRAMFILES(X86)}\Google\Chrome Remote Desktop\CurrentVersion\remoting_start_host.exe" --code="4/0AY0e-g5cTWAosMEChDU2qE2oAiRyHYlclTi01HuyjbmNF0LJr1ibUISkcfnz58fIxRSb0g" --redirect-url="https://remotedesktop.google.com/_/oauthredirect" --name=$Env:COMPUTERNAME'
+        description: 'Nhập code'
         required: true
       pincode:
-        description: '111222'
+        description: 'Nhập mã pin tuỳ ý (6 số)'
         required: true
   
 jobs:
